--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -2,10 +2,11 @@
 
 {% block content %}
 
-{% for p in posts %}
+{% for content in posts %}
   <div class="content">
-    <div class="content-title">{{content.title}}</div>
-    <div class="content-body">{{content.content}}</div>
+    <div class="content-subject">{{content.subject}}</div>
+    <pre class="content-body">{{content.content}}</pre> <!--this tag says any whitespace b/t the tag is
+                                            pre-formatted and should stay that way-->
   </div>
 {% endfor %}
 
