--- a/templates/base.html
+++ b/templates/base.html
@@ -45,10 +45,6 @@
       font-size: 24px;
     }
 
-    hr {
-      margin: 20px auto;
-    }
-
     .content + .content {
       margin-top: 20px;
     }
@@ -62,14 +58,19 @@
       margin: 0;
       font-size: 17px;
     }
+
+
   </style>
 
 
     <body>
-      <h1>Blogs!</h1>
-
+      <!-- <h1>Blogs!</h1> -->
+      <h1><a href="/blog" class="main-title"> BLOG!</a></h1>
+      <br>
+      <br>
       {% block content %}
       {% endblock %}
+
 
     </body>
   </html>
