--- a/templates/permalink.html
+++ b/templates/permalink.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-<div class="content">
-  <div class="content-subject">{{post.subject}}</div>
-  <div class="content-body">{{post.post}}</div>
 
+  <div class="content-subject">{{post.subject}}</div>
+<div class="content">
+  <div class="content-body">{{post.content}}</div>
 </div>
 
 {% endblock %}
