--- a/templates/base.html
+++ b/templates/base.html
@@ -1,76 +1,104 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <title>build-a-blog</title>
+    <link rel="stylesheet" type="text/css" href="main.css"/>
   </head>
-  <!DOCTYPE html>
-
-  <html>
-    <head>
-      <title>Blog!</title>
-    </head>
 
   <style type="text/css">
-    body {
-      font-family: sans-serif;
-      width: 800px;
-      margin: 0 auto;
-      padding: 10px;
-    }
+      html {
+        background-color: #FCFAF9;
+      }
 
-    .error {
-      color: red
-    }
+      body {
+        width: 800px;
+        margin: 0 auto;
+        padding: 10px;
 
-    label {
-      display: block;
-      font-size: 20px;
-    }
+      }
+      .error {
+        color: red
+      }
+      label {
+        display: block;
+        font-size: 25px;
+        color: #FFADC6;
+        font-family: "Courier New";
+      }
+      label + label {
+        margin-top: 20px;
+      }
+      input[type=text] {
+        width: 500px;
+        font-size: 20px;
+        padding: 2px;
+        color: #5E5E5E;
+        font-family: "Courier New";
+        background-color:#E6E4E3;
+      }
+      textarea {
+        background-color:#E6E4E3;
+        width: 500px;
+        color: #5E5E5E;
+        height: 400px;
+        font-size: 17px;
+        font-family: "Courier New";
+      }
+      .button {
+        background-color:#E6E4E3;
+        color: #5E5E5E;
+        font-size: 24px;
+        font-family: "Courier New";
+        border-radius: 12px;
+      }
 
-    input[type=text] {
-      width: 400px;
-      font-size: 20px;
-      padding: 2px;
-    }
+      .button:hover {
+        background-color: #FFADC6;
+        color: white;
 
-    textarea {
-      width: 400px;
-      height: 200px;
-      font-size: 17px;
-      font-family: monospace;
-    }
+      }
 
-    input[type=submit] {
-      font-size: 24px;
-    }
+      .main-title{
+        display: block;
+        font-family: "Courier New";
+        color: #48E5C2;
+        font-size: 60px;
 
-    .content + .content {
-      margin-top: 20px;
-    }
+        text-align: center;
+        margin-bottom: 30px;
+        text-decoration: none;
+      }
 
-    .content-subject {
-      font-weight: bold;
-      font-size: 20px;
-    }
+      .content + .content {
+        margin-top: 15px;
+      }
+      .content-subject {
+        color: #FFADC6;
 
-    .content-body {
-      margin: 0;
-      font-size: 17px;
-    }
+        font-family: "Courier New";
+        font-size: 24px;
+        text-decoration: none;
+        border-bottom: 4px double #FFADC6;
+      }
+      .content-body {
+        margin-top: 5px;
+        font-size: 15px;
+        font-style: italic;
+        color:#5E5E5E ;
+        font-family: "Courier New";
+      }
+
+    </style>
+
+  <body>
+    <a href="/blog" class="main-title">
+      Boring Blog
+    </a>
+
+    {% block content %}
+    {% endblock %}
 
 
-  </style>
+  </body>
 
-
-    <body>
-      <!-- <h1>Blogs!</h1> -->
-      <h1><a href="/blog" class="main-title"> BLOG!</a></h1>
-      <br>
-      <br>
-      {% block content %}
-      {% endblock %}
-
-
-    </body>
   </html>
