--- a/templates/post.html
+++ b/templates/post.html
@@ -1,11 +1,10 @@
 <div class="post">
-
-  <div class="post-title">
+  <div class="post-heading">
+    <div class="post-title">
       {{p.subject}}
-  </div>
+    </div>
 
   <div class="post-content">
     {{p._render_text | safe}}
   </div>
-
 </div>
